# pi_hifi_ctrl

./: README.md  ca_amp_ctrl.py  cec_stream.py  install.sh  libamp.py  pyproject.toml  update.sh  web.py
systemd/: cec-stream.service  pi-hifi-ctrl-update.service  pi-hifi-ctrl-update.timer  pi-hifi-web.service  pigpiod.service
